src/components/MainPage/MainPage.css
/* ... */
  #section-1 .content-slider #banner1:checked ~ nav label:nth-of-type(1),
  #section-1 .content-slider #banner2:checked ~ nav label:nth-of-type(2),
  #section-1 .content-slider #banner3:checked ~ nav label:nth-of-type(3),
  #section-1 .content-slider #banner4:checked ~ nav label:nth-of-type(4) {
    cursor: default;
    color: #fff;
    transition: all 0.5s;
  }
  #section-1 .content-slider #banner1:checked ~ nav label:nth-of-type(1) .progressbar,
  #section-1 .content-slider #banner2:checked ~ nav label:nth-of-type(2) .progressbar,
  #section-1 .content-slider #banner3:checked ~ nav label:nth-of-type(3) .progressbar,
  #section-1 .content-slider #banner4:checked ~ nav label:nth-of-type(4) .progressbar {
    background: #fff;
  }
  #section-1 .content-slider #banner1:checked ~ nav label:nth-of-type(1) .progressbar-fill,
  #section-1 .content-slider #banner2:checked ~ nav label:nth-of-type(2) .progressbar-fill,
  #section-1 .content-slider #banner3:checked ~ nav label:nth-of-type(3) .progressbar-fill,
  #section-1 .content-slider #banner4:checked ~ nav label:nth-of-type(4) .progressbar-fill {
    animation: progressBarFill 5s linear;
  }
  /* Animations */
  @keyframes progressBarFill {
    from {
      margin-left: -100%;
    }
    to {
      margin-left: 0;
    }
  }

  .fa-user::before {
    content: "\f007"; 
  }


  .search-form #search-form {
    background-color: #E55405;
    border-bottom-left-radius: 23px;
    border-bottom-right-radius: 23px;
    border-top-right-radius: 23px;
    border-top-left-radius: 23px;
    padding: 35px 60px;
    margin-bottom: 100px;
  }
  
  .search-form #search-form h4 {
    color: black;
    font-size: 25px;
    font-weight: 700;
    margin-top: 20px;
  }
  
  .search-form #search-form select {
    background-color: transparent;
    border: none;
    outline: none;
    box-shadow: none;
    border-bottom: 1px solid #fff;
    border-radius: 0px;
    color: #fff;
    font-size: 15px;
    font-weight: 300;
    width: 100%;
    cursor: pointer;
  }
  
  .search-form #search-form option {
    background-color: #E55405;
  }

  .search-form  .row{
    margin-top: 10px;
  }



  .search-form .innerFilter{
    background-color: rgb(255, 254, 254);
    border-bottom-left-radius: 23px;
    border-bottom-right-radius: 23px;
    border-top-right-radius: 23px;
    border-top-left-radius: 23px;
    padding: 20px 40px;
    margin-bottom: 20px;
  }

  .search-form .filterTag{
    background-color: #E55405;
    border: 1px solid #E55405;
    cursor: pointer;
    color: #fff;
    display: flex;
    position: relative;
    overflow: hidden;
    border: 1px solid #E55405;
    border-radius: 25px;
    font-weight: 500;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 10px;
    padding-right: 10px;
    margin-left: 10px;
  }

  .search-form .filterTag:hover{

    background-color: #fff;
    border-color: #E55405;
    color: #E55405;
    opacity: 0.8;
  }

  .search-form .filterTag .deletebutton{
    cursor: pointer;
    margin-left: 15px;
    border: 1px solid white;
    border-radius: 100%;
    padding-left: 5px;
    padding-right: 5px;
  }
  /* .search-form #search-form button {
    width: 100%;
    text-align: center;
    font-size: 14px;
    color: #fff;
    background-color: transparent;
    border: 1px solid #fff;
    padding: 8px 30px;
    display: inline-block;
    border-radius: 25px;
    font-weight: 500;
    text-transform: capitalize;
    letter-spacing: 0.5px;
    transition: all .3s;
    position: relative;
    overflow: hidden;
  } */
  
  /* .search-form #search-form button:hover {
    background-color: #fff;
    color: #E55405;
  } */
  .card-silder {
    margin-top: 120px;
  }
  .card-silder .row{
    justify-content: center;
  }
  .amazing-deals {
    margin-top: 120px;
  }
  
  .amazing-deals .image {
    height: 360px;
    overflow: hidden;
    width: 260px;
  }
  /* for transition : */

  .search-form .row {
    justify-content: center;
  }

  .amazing-deals .item .image {
    border-top-left-radius: 23px;
    border-bottom-left-radius: 23px;
    overflow: hidden;

  }
  
  .amazing-deals .item {
    background-color: #f7f7f7;
    border-radius: 23px;
    padding-right: 30px;
    margin-bottom: 30px;
    animation: fade-in 1s ease-in-out;
    
  }

  .item .content p{
    cursor : pointer;
  }

  .item .content p:hover{
    color : #E55405
  }

  @keyframes fade-in {
    from {
      opacity: 0;
      transform: translateY(20px);
    }
  
    to {
      opacity: 1;
      transform: translateY(0);
    }
  }

  .example-appear {
    opacity: 0;
  }
  
  .example-appear.example-appear-active {
    opacity: 1;
    transition: opacity 500ms ease-out;
  }
  

  
  .amazing-deals .item span.info {
    color: #E55405;
    font-size: 15px;
    margin-bottom: 20px;
    display: block;
  }
  
  .amazing-deals .item h4 {
    font-size: 20px;
    font-weight: 700;
    padding-bottom: 25px;
    margin-bottom: 10px;
    border-bottom: 1px solid #ddd;
  }
  
  .amazing-deals .item i {
    color: #777;
    margin-right: 5px;
  }
  
  .amazing-deals .item span.list {
    font-size: 15px;
    color: #afafaf;
    font-weight: 500;
  }
  
  .amazing-deals .item .content {
    padding: 30px 0px;
  }
  
  .amazing-deals .item p {
    padding-top: 25px;
    margin-top: 10px;
    border-top: 1px solid #ddd;
    margin-bottom: 30px;
    word-wrap: break-word; /* Breaks long words to fit the container */
    white-space: pre-wrap; 
  }

  .dialogdesc{
    padding-left: 20px;
    padding-right: 20px;
  }
  .dialogdesc p{
    word-wrap: break-word !important; /* Breaks long words to fit the container */
    white-space: pre-wrap;

  }

  .my-date-picker{
    height: 53px;
    border-radius: 4px;
    border: 1px solid #c4c3c3;
    margin-left: 30px;
    padding-left: 20px;
    
  }
  .my-date-picker:hover{    
    border: 1px solid black;
  }
  
  .amazing-deals ul.page-numbers {
    text-align: center;
    margin-right: 30px;
    margin-bottom: 20px;
  }
/* ... */

